# quickn-blog

./: .gitignore  Blog.toml  Blog_template.toml  Cargo.toml  build.rs
blog-frontend/: .gitignore  Cargo.toml  build.js
blog-frontend/src/: api.rs  app.rs  constants.rs  errors.rs  footer.rs  lib.rs  navbar.rs  route.rs
blog-frontend/src/pages/: accounts.rs  login.rs  main.rs  mod.rs  posts.rs  register.rs  view_post.rs
blog-frontend/src/services/: auth.rs  cookie.rs  mod.rs
db/: stack.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2021-01-05-033642_create_posts/: down.sql  up.sql
src/: api.rs  config.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/middlewares/: postgresql.rs
static/css/: navbar.css
static/js/: bundle.js
static/wasm/: blog_frontend_bg.wasm
templates/: template.html
