[package]
name = "quickn-blog"
version = "0.1.0"
authors = ["quickshell"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-files = "0.2"
toml = "0.5"
serde = "1"
serde_derive = "1"
lazy_static = "1"
serde_json = "1"