[package]
name = "quickn-blog"
version = "0.1.0"
authors = ["quickshell"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-files = "0.5"
toml = "0.5"
serde = "1"
serde_derive = "1"
lazy_static = "1"
serde_json = "1"
diesel = { version = "1", features = ["postgres"] }
sha3 = "^0.9"
hex = "0"
jwt-simple = "0.2"
hmac = "0.10"