[package]
name = "blog-frontend"
version = "0.1.0"
authors = ["quickshell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
yewtil = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4.6"
wasm-logger = "^0.2.0"
reqwest = { version = "0.10", features = ["json"] }
wasm-bindgen-futures = "^0.4.1"
yew-router = "0.14"
ybc = "*"
mailchecker = "4"
web-sys = { version = "0", features = ["HtmlDocument"] }